--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,26 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/index.html",
+      "src": "index.html",
       "use": "@vercel/static"
     },
     {
-      "src": "dist/styles.css",
+      "src": "styles.css",
       "use": "@vercel/static"
     },
     {
-      "src": "dist/script.js",
+      "src": "script.js",
       "use": "@vercel/static"
     },
     {
-      "src": "dist/images/*",
+      "src": "images/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/index.html"
+      "dest": "/index.html"
     }
   ]
 }
